Migration & worked css

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,6 @@
                     <li>@Html.ActionLink("Students", "Create", "Students")</li>
                     <li>@Html.ActionLink("Course", "Index", "Courses")</li>
                     <li>@Html.ActionLink("Enrollment", "Index", "Enrollments")</li>
-
                 </ul>
             </div>
         </div>
@@ -38,7 +37,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - LAWSON TECH</p>
         </footer>
     </div>
 
